Ajustes implementación lector .csv y autofocus en inputs .hbs

--- a/src/views/tareas/escanearPalletCambio.hbs
+++ b/src/views/tareas/escanearPalletCambio.hbs
@@ -35,7 +35,7 @@
     <h1>Confirmar Cambios</h1>
 
     <!-- Campo de entrada para escanear el código de un pallet -->
-    <input type="text" id="palletCode" placeholder="Pallet cambiado...">
+    <input type="text" id="palletCode" placeholder="Pallet cambiado..." autofocus>
 
     <!-- Botón para agregar el pallet escaneado a la lista -->
     <button id="agregarPallet">Confirmar Pallet</button>
@@ -49,7 +49,7 @@
     <h2>Escanear Bahía Destino</h2><!-- Subtítulo indicando la acción a realizar -->
 
     <!-- Campo de entrada para escanear el código de la bahía destino -->
-    <input type="text" id="bahiaDestinoCode" placeholder="Escanea la bahía destino...">
+    <input type="text" id="bahiaDestinoCode" placeholder="Escanea la bahía destino..." >
 
     <!-- Botón de confirmación deshabilitado inicialmente -->
     <button id="confirmarBtn" disabled>Confirmar</button>
