--- a/src/views/tareas/espera.hbs
+++ b/src/views/tareas/espera.hbs
@@ -35,7 +35,7 @@
 
     <!-- Campo para ingresar el código numérico -->
     <label for="codeInput">Ingrese Código:</label>
-    <input type="string" id="codeInput" placeholder="Código numérico" />
+    <input type="string" id="codeInput" placeholder="Código numérico" autofocus/>
 
     <button class="submit-code-btn" id="submitCodeBtn">Confirmar Código</button>
 
