--- a/src/views/tareas/esperaCambioBahia.hbs
+++ b/src/views/tareas/esperaCambioBahia.hbs
@@ -35,7 +35,7 @@
 
     <p>Escanee la bahía de inicio.</p>
     <!-- Input para escanear la bahía de inicio (inicialmente deshabilitado) -->
-    <input type="text" id="bahiaInput" placeholder="Escanear bahía">
+    <input type="text" id="bahiaInput" placeholder="Escanear bahía" autofocus>
 
     <!-- Botón para continuar, inicialmente deshabilitado -->
     <button id="continuarBtn">Continuar</button>
