--- a/src/views/tareas/esperaCargaCamion.hbs
+++ b/src/views/tareas/esperaCargaCamion.hbs
@@ -36,7 +36,7 @@
     <p id="contadorPallets">Pallets: 0/0</p>
 
     <!-- Campo de entrada para escanear códigos de pallets -->
-    <input type="text" id="palletCode" placeholder="Escanea un pallet...">
+    <input type="text" id="palletCode" placeholder="Escanea un pallet..." autofocus>
 
     <!-- Botón para agregar un pallet a la lista -->
     <button onclick="agregarPallet()">Agregar Pallet</button>
