Calculo turno automatico, hora Chile, ajustes varios backend y frontend, restricción ticket único eliminada

--- a/src/views/tareas/escanearBahia.hbs
+++ b/src/views/tareas/escanearBahia.hbs
@@ -34,7 +34,7 @@
     <p>Por favor, escanee la bahía donde dejará el pallet.</p><!-- Mensaje con instrucciones para el usuario -->
 
     <!-- Campo para ingresar el código numérico -->
-    <label for="codeInput">Ingrese Código:</label>
+    <label for="codeInput">Ingrese Código de la bahía:</label>
     <input type="number" id="codeInput" placeholder="Escanea la bahía..." autofocus/>
 
     <!-- Botón para confirmar el escaneo de la bahía (inicialmente deshabilitado) -->
