Rutas, Controladores, Passport y hbs. Bases para módulo administración

--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -8,6 +8,7 @@
             <!-- <a href="/users/signin">login test</a> -->
             <a href="/users/signup">Registrar usuario </a>
             <a href="/tareas/seleccion">Seleccionar una tarea</a>
+            <a href="/admin/inicio">Vista Administración Inicio</a>
         </div>
     </div>
 </footer>
