--- a/src/views/admin/tiempos.hbs
+++ b/src/views/admin/tiempos.hbs
@@ -10,9 +10,9 @@
     <h2><strong>Dashboard</strong></h2>
     <button onclick="window.location.href='/admin/usuarios'">Usuarios</button>
     <button onclick="window.location.href='/admin/transportes'">Transportes</button>
-    <button onclick="window.location.href='/admin/cargarcamionadm'">Cargar Camión</button>
-    <button onclick="window.location.href='/admin/retirarpalletadm'">Retirar Pallet</button>
-    <button onclick="window.location.href='/admin/cambioentrebahiasadm'">Cambio entre Bahías</button>
+    <button onclick="window.location.href='/admin/cargarCamionAdmin'">Cargar Camión</button>
+    <button onclick="window.location.href='/admin/retirarPalletAdmin'">Retirar Pallet</button>
+    <button onclick="window.location.href='/admin/cambioEntreBahiasAdmin'">Cambio entre Bahías</button>
     <button onclick="window.location.href='/admin/tiempos'">Tiempos</button>
     <button class="logout-btn" id="logoutBtn">Cerrar Sesión</button>
   </div>
