--- a/src/views/admin/usuarios.hbs
+++ b/src/views/admin/usuarios.hbs
@@ -10,7 +10,7 @@
   <div class="sidebar">
     <h2>Dashboard</h2>
     <button onclick="window.location.href='/admin/inicio'">Inicio</button>
-    <button onclick="window.location.href='/admin/transportes'">Transportes</button>
+    <!-- <button onclick="window.location.href='/admin/transportes'">Transportes</button> -->
     <button onclick="window.location.href='/admin/cargarCamionAdmin'">Cargar Camión</button>
     <button onclick="window.location.href='/admin/retirarPalletAdmin'">Retiro de Pallet</button>
     <button onclick="window.location.href='/admin/cambioEntreBahiasAdmin'">Cambio entre Bahías</button>
@@ -27,12 +27,6 @@
       </div>
     </div>
 
-    <label for="turno-select" class="label-destacado">Selecciona un turno</label>
-    <select id="turno-select" class="selector">
-      <option>Mañana</option>
-      <option>Tarde</option>
-      <option>Noche</option>
-    </select>
 
     <table class="tasks-table">
       <tr>
