--- a/src/views/admin/retirarPalletAdmin.hbs
+++ b/src/views/admin/retirarPalletAdmin.hbs
@@ -9,7 +9,7 @@
   <div class="sidebar">
     <h2>Dashboard</h2>
     <button onclick="window.location.href='/admin/usuarios'">Usuarios</button>
-    <button onclick="window.location.href='/admin/transportes'">Transportes</button>
+    <!-- <button onclick="window.location.href='/admin/transportes'">Transportes</button> -->
     <button onclick="window.location.href='/admin/cargarCamionAdmin'">Cargar Camión</button>
     <button onclick="window.location.href='/admin/inicio'">Inicio</button>
     <button onclick="window.location.href='/admin/cambioEntreBahiasAdmin'">Cambio entre Bahías</button>
