--- a/src/views/admin/retirarPalletAdmin.hbs
+++ b/src/views/admin/retirarPalletAdmin.hbs
@@ -13,7 +13,7 @@
     <button onclick="window.location.href='/admin/cargarCamionAdmin'">Cargar Camión</button>
     <button onclick="window.location.href='/admin/inicio'">Inicio</button>
     <button onclick="window.location.href='/admin/cambioEntreBahiasAdmin'">Cambio entre Bahías</button>
-    <button onclick="window.location.href='/admin/tiempos'">Tiempos</button>
+    <!-- <button onclick="window.location.href='/admin/tiempos'">Tiempo Real</button> -->
     <button class="logout-btn" id="logoutBtn">Cerrar Sesión</button>
   </div>
 
