--- a/src/views/admin/inicio.hbs
+++ b/src/views/admin/inicio.hbs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,11 +11,9 @@
   <div class="sidebar">
     <h2><strong>Dashboard</strong></h2>
     <button onclick="window.location.href='/admin/usuarios'">Usuarios</button>
-    <!-- <button onclick="window.location.href='/admin/transportes'">Transportes</button> -->
     <button onclick="window.location.href='/admin/cargarCamionAdmin'">Cargar Camión</button>
     <button onclick="window.location.href='/admin/retirarPalletAdmin'">Retirar Pallet</button>
     <button onclick="window.location.href='/admin/cambioEntreBahiasAdmin'">Cambio entre Bahías</button>
-    <!-- <button onclick="window.location.href='/admin/tiempos'">Tiempo Real</button> -->
     <button class="logout-btn" id="logoutBtn">Cerrar Sesión</button>
   </div>
 
@@ -21,102 +21,102 @@
     <div class="header">
       <h1>Resumen de Tiempos</h1>
       <div class="fecha">
-        <strong>Miércoles 2 de abril de 2025</strong><br />
-        16:00 hrs
+        <strong>{{fechaActual}}</strong><br />
+        {{horaActual}} hrs
       </div>
     </div>
 
-    <!-- Resumen Mensual -->
+    <hr />
+
+    <!-- RESUMEN MENSUAL -->
     <div class="section">
       <h2>Resumen Mensual</h2>
       <table class="summary-table">
-        <tr>
-          <th>Operaciones</th>
-          <th>Tiempo total </th>
-          <th>Turnos</th>
-        </tr>
-        <tr>
-          <td>
-            • Cargar Camión<br />
-            • Cambio entre bahías<br />
-            • Retirar Pallet
-          </td>
-          <td>
-            • 33:09:23<br />
-            • 24:10:02<br />
-            • 20:32:04
-          </td>
-          <td>
-            • Tarde<br />
-            • Tarde<br />
-            • Noche
-          </td>
-        </tr>
+        <thead>
+          <tr>
+            <th>Operaciones</th>
+            <th>Tiempo Total</th>
+            <th>Turnos</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              • Cargar Camión<br />
+              • Cambio entre bahías<br />
+              • Retirar Pallet
+            </td>
+            <td>
+              • {{totalDuraciones.cargar}}<br />
+              • {{totalDuraciones.cambiar}}<br />
+              • {{totalDuraciones.retirar}}
+            </td>
+            <td>
+              • {{turnos.cargar}}<br />
+              • {{turnos.cambiar}}<br />
+              • {{turnos.retirar}}
+            </td>
+          </tr>
+        </tbody>
       </table>
     </div>
 
-    <!-- Resumen Semanal -->
-    <div class="section">
-      <h2>Resumen Semanal</h2>
-      <table class="summary-table">
-        <tr>
-          <th>Operaciones</th>
-          <th>Tiempo total</th>
-          <th>Turnos</th>
-        </tr>
-        <tr>
-          <td>• 20:32:45</td>
-          <td>• Cargar Camión</td>
-          <td>• Mañana</td>
-        </tr>
-      </table>
-    </div>
+    <hr />
 
-    <!-- Cantidad de operaciones totales -->
+    <!-- OPERACIONES TOTALES -->
     <div class="section">
       <h2>Operaciones Totales</h2>
       <table class="tasks-table">
-        <tr>
-          <th>Cambios de Bahía</th>
-          <th>Pallets Retirados de Picking</th>
-          <th>Pallets Cargados</th>
-          <th>Camiones Cargados</th>
-        </tr>
-        <tr>
-          <td>• 55</td>
-          <td>• 360</td> <!-- Lueog se deben fusonar algunos cuando son más de 10 -->
-          <td>• 345</td>
-          <td>• 110</td>
-        </tr>
+        <thead>
+          <tr>
+            <th>Cambios de Bahía</th>
+            <th>Pallets Retirados de Picking</th>
+            <th>Camiones Cargados</th>
+            <!-- <th>Camiones Cargados</th> -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>• {{totalOperaciones.cambiar}}</td>
+            <td>• {{totalOperaciones.retirar}}</td>
+            <td>• {{totalOperaciones.cargar}}</td>
+            <!-- <td>• {{totalCamionesCargados}}</td> -->
+          </tr>
+        </tbody>
       </table>
     </div>
-    <!-- Cantidad de operaciones totales -->
+
+    <hr />
+
+    <!-- RENDIMIENTO GENERAL -->
     <div class="section">
       <h2>Rendimiento General</h2>
       <table class="tasks-table">
-        <tr>
-          <th>Turno más rapido</th> <!-- Tiempo medio por tareas menor -->
-          <th>Actividad más Frecuente</th> <!-- Más veces realizada -->
-          <th>Actividad más demandante</th> <!-- Mayor tiempo -->
-          <th>Turno más lento</th> <!-- Tiempo medio por tareas mayor -->
-        </tr>
-        <tr>
-          <td>• Tarde</td>
-          <td>• Retirar Pallet</td> <!-- Luego se deben fusonar algunos cuando son más de 10 -->
-          <td>• Cargar Camion</td>
-          <td>• Mañana</td>
-        </tr>
-        <tr>
-          <td>• 6 min</td>
-          <td>• 360 veces</td> <!-- Luego se deben fusonar algunos cuando son más de 10 -->
-          <td>• 8 min</td>
-          <td>• 10 min</td>
-        </tr>
+        <thead>
+          <tr>
+            <th>Turno más rápido</th>
+            <th>Actividad más frecuente</th>
+            <th>Actividad más demandante</th>
+            <th>Turno más lento</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>• {{rendimiento.turnoRapido.turno}}</td>
+            <td>• {{get rendimiento.actividadFrecuente 0}}</td>
+            <td>• {{get rendimiento.actividadDemandante 0}}</td>
+            <td>• {{rendimiento.turnoLento.turno}}</td>
+          </tr>
+          <tr>
+            <td>• {{rendimiento.turnoRapido.promedio}}</td>
+            <td>• {{get rendimiento.actividadFrecuente 1}} veces</td>
+            <td>• {{get rendimiento.actividadDemandante 1}} segundos</td>
+            <td>• {{rendimiento.turnoLento.promedio}}</td>
+          </tr>
+        </tbody>
       </table>
     </div>
   </div>
-
-  
 
   <script>
     const logoutBtn = document.getElementById('logoutBtn');
