--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -1,4 +1,4 @@
-/*CONFIGURACIÓN ESTILOS DEL FOOTER PARA LAS OPCIONES DE DESARROLLO*/
+/*Configuración estilos del footer para las opciones de desarrollo*/
 
 .footer {
     text-align: center;
