--- a/src/public/css/escanearBahia.css
+++ b/src/public/css/escanearBahia.css
@@ -2,8 +2,8 @@
 .container {
     background: var(--blanco);
     padding: 20px;
-    max-width: 350px; /*CAMBIO AQUÍ*/
-    width: 80%; /*NUEVO*/
+    max-width: 350px; 
+    width: 80%;
     margin: auto;
     border-radius: 10px;
     box-shadow: 0 4px 8px var(--sombra-cuadro);
@@ -23,8 +23,8 @@ p {
 
 /*Estilos del campo de entrada*/
 input {
-    box-sizing: border-box; /* SE AGREGÓ ESTA LÍNEA */
-    width: 80%; /*CAMBIO AQUÍ*/
+    box-sizing: border-box; 
+    width: 80%; 
     padding: 10px;
     border: 1px solid var(--celeste-claro);
     border-radius: 5px;
@@ -35,14 +35,14 @@ input {
 
 /*Estilos del botón confirmar*/
 button {
-    background: var(--celeste-oscuro); /*CAMBIO AQUÍ*/
+    background: var(--celeste-oscuro); 
     color: white;
     padding: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 15px;
-    width: 80%; /*CAMBIO AQUÍ*/
+    width: 80%; 
 }
 
 button:hover {
@@ -69,7 +69,6 @@ a:hover {
     color: green;
 }
 
-/*NUEVO*/
 .user-info {
     font-size: 16px;
     font-weight: bold;
@@ -77,4 +76,3 @@ a:hover {
     margin-bottom: 10px;
     margin-top: 20px;
 }
-/*HASTA ACÁ*/
