--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -43,7 +43,7 @@ body {
 .login-container h1 {
     color: var(--celeste-claro);
     margin-bottom: 30px;
-    font-size: 40px; /*CAMBIO AQUÍ*/
+    font-size: 40px;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -66,7 +66,7 @@ body {
     outline: none;
     transition: border 0.3s ease;
     box-sizing: border-box;
-    margin-top: 20px; /*NUEVO*/
+    margin-top: 20px;
 }
 
 /*Efecto de foco en los inputs*/
@@ -77,7 +77,7 @@ body {
 
 /*Botón de ingreso*/
 .btn-primary{
-    background-color: var(--celeste-oscuro); /*cambio aquí*/
+    background-color: var(--celeste-oscuro);
     color: var(--blanco);
     border: none;
     padding: 12px;
@@ -87,13 +87,13 @@ body {
     font-weight: bold;
     transition: background 0.3s ease, transform 0.2s ease;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 80%; /*CAMBIO AQUÍ*/
+    width: 80%;
     margin-top: 20px;
 }
 
 /*Efectos Hover y Active en el Botón*/
 .btn-primary:hover {
-    background-color: var(--celeste-claro); /*CAMBIO AQUÍ*/
+    background-color: var(--celeste-claro);
     transform: scale(1.02);
 }
 
